// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar favorites action - behavior should cap display at MAX when number exceeds maximum 1`] = `
<FavoritesIconBadge
  favoritesCount={9999}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <div
    className="tss-1a2kjyc-root theme__tab-bar__favorites-icon-badge theme__badge"
  >
    999+
  </div>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action - behavior should show count when number is changed 1`] = `
<FavoritesIconBadge
  favoritesCount={99}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <div
    className="tss-1a2kjyc-root theme__tab-bar__favorites-icon-badge theme__badge"
  >
    99
  </div>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action should render exact number 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <WithWidgetSettings(Connect(FavoritesIconBadge))>
    <Connect(FavoritesIconBadge)
      widgetSettings={{}}
    >
      <FavoritesIconBadge
        dispatch={[Function]}
        favoritesCount={1}
        showWishlistItemsCountBadge={true}
        widgetSettings={{}}
      >
        <div
          className="tss-1a2kjyc-root theme__tab-bar__favorites-icon-badge theme__badge"
        >
          1
        </div>
      </FavoritesIconBadge>
    </Connect(FavoritesIconBadge)>
  </WithWidgetSettings(Connect(FavoritesIconBadge))>
</Provider>
`;
